--- a/ext/style/main.css
+++ b/ext/style/main.css
@@ -2,13 +2,21 @@
     outline: none;
     font-family: calibri, ubuntu;
 }
+
 #main {
-    min-height: 450px;
+    min-height: 550px;
     width: 400px;
+    margin-left: 20px;
+}
+
+#get {
+    padding: 8px 16px;
+    position: relative;
+    top: -3px;
 }
 
 #input {
-    padding: 8px;
+    padding: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 18px;
@@ -17,36 +25,7 @@
 }
 
 #input:focus {
-    border: 1px solid indianred;
-}
-
-#get {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    color: #050505;
-    padding: 10px 20px;
-    background: -moz-linear-gradient(
-        top,
-        #ffffff 0%,
-        #dbdbdb 50%,
-        #b5b5b5);
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(#ffffff),
-        color-stop(0.50, #dbdbdb),
-        to(#b5b5b5));
-    border-radius: 4px;
-    border: 1px solid #949494;
-    text-decoration: none;
-    text-shadow:
-        0px -1px 0px rgba(000,000,000,0.2),
-        0px 1px 0px rgba(255,255,255,1);
-    position: relative;
-    top: -2px;
-}
-
-#get:hover {
-    color: darkred;
+    border: 1px solid #5bc0de;
 }
 
 #refer {
@@ -54,9 +33,7 @@
     text-align: right;
     font-size: 12px;
     font-weight: bold;
-    line-height: 12px;
-    position: relative;
-    margin-right: 20px;
+    line-height: 20px;
 }
 
 
@@ -65,12 +42,7 @@ header {
     top: 0px;
     background: #fff;
     z-index: 1000;
-}
-
-#result {
-    position: relative;
-    margin-top: 100px;
-    margin-left: -40px;
+    width: 400px;
 }
 
 #loader {
@@ -83,3 +55,27 @@ header {
 .notFound {
     margin-left: 40px
 }
+
+#tabWrapper {
+    position: relative;
+    margin-top: 120px;
+}
+
+#alert {
+    padding: 7px;
+    margin-top: 8px;
+    font-weight: bold;
+    font-size: 10px;
+    margin-bottom: 0px;
+    display: none;
+}
+
+
+#title {
+    font-size: 16px;
+    position: relative;
+    top: 4px;
+}
+
+
+
