--- a/ext/style/main.less
+++ b/ext/style/main.less
@@ -1,3 +1,18 @@
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  margin: 5px;
+  background-color: #999;
+  -webkit-border-radius: 5px;
+}
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+  height: 5px;
+  display: block;
+}
+
 * {
   outline: none;
   font-family: calibri, ubuntu;
@@ -58,7 +73,7 @@ header {
     padding: 7px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    font-size: 18px;
+    font-size: 17px;
     width: 260px;
     text-transform: uppercase;
   }
@@ -90,7 +105,7 @@ header {
   #get {
     padding: 8px 16px;
     position: relative;
-    top: -3px;
+    top: -4px;
   }
 
 
