--- a/ext/style/main.less
+++ b/ext/style/main.less
@@ -76,7 +76,7 @@ header {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 17px;
-    width: 260px;
+    width: 320px;
     text-transform: uppercase;
   }
 
@@ -110,6 +110,12 @@ header {
     top: -4px;
   }
 
+
+  .star {
+    position: relative;
+    top: -2px;
+    left: -6px;
+  }
 
 
 }
