--- a/ext/style/main.css
+++ b/ext/style/main.css
@@ -7,8 +7,7 @@
   -webkit-border-radius: 5px;
   cursor: pointer;
 }
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
+::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment {
   height: 5px;
   display: block;
 }
@@ -92,4 +91,9 @@ header {
   padding: 8px 16px;
   position: relative;
   top: -4px;
+}
+#main #star {
+  position: relative;
+  top: -2px;
+  left: -6px;
 }
