--- a/ext/style/main.less
+++ b/ext/style/main.less
@@ -106,6 +106,11 @@ header {
     }
   }
 
+  .panel-title {
+      a {
+        text-transform: uppercase;
+      }
+  }
 
   #get {
     padding: 8px 16px;
